docs(_config.yaml): updating youtube font awesome link

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   bio    : "Just an average DevOps Engineer ramblings."
   links:
     - label: "YouTube"
-      icon: "fas fa-youtube"
+      icon: "fa-branhds fa-square-youtube"
       url: "https://www.youtube.com/@devopswithbrian"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
