--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/orgs/DevOps-With-Brian/repositories"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/brian-hopkins-b896151b2"
 
 footer:
   links:
