--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,11 @@ github_username: Devops-With-Brian
 minimal_mistakes_skin: default
 search: true
 
+comments:
+  provider: "disqus"
+  disqus:
+    shortname: "devops-with-brian"
+
 analytics:
   provider: "google-gtag"
   google:
