fix(google-analytics): fixing the google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ comments:
     shortname: "devops-with-brian"
 
 analytics:
-  provider: "google-gtag"
+  provider: "google-universal"
   google:
     tracking_id: "G-LLPRJVGS02"
     anonymize_ip: false
