--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,10 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/brian-hopkins-b896151b2"
+    - label: "Discord"
+      icon: "fab fa-fw fa-discord"
+      url: "https://discord.gg/2ZkhQxNs5A"
+    
 
 footer:
   links:
